--- a/po/he.po
+++ b/po/he.po
@@ -2,22 +2,22 @@
 # Hebrew translations for xfce4-panel package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-#
 # Dotan Kamber <kamberd@yahoo.com>, 2004, 2006.
 # Jonatan Perry <Jonatan443@walla.co.il>, 2004.
-# Yuval Tanny <tanai@int.gov.il>, 2004.
+# Yuval Tanny <tanai@int.gov.il>, 2004, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: he\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-23 10:36+0200\n"
-"PO-Revision-Date: 2006-04-19 02:57+0300\n"
-"Last-Translator: Dotan Kamber <kamberd@yahoo.com>\n"
+"PO-Revision-Date: 2006-04-28 14:03+0300\n"
+"Last-Translator: Yuval Tanny <tanai@int.gov.il>\n"
 "Language-Team: Hebrew\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.10.2\n"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -39,8 +39,7 @@ msgid "Xfce Panel"
 msgstr "לוח Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr "הפריט יוסר מהלוח ומאפייניו יאבדו."
 
 #. configure, hide by default
@@ -192,9 +191,8 @@ msgid "Full Width"
 msgstr "רוחב מלא"
 
 #: ../panel/panel-dialogs.c:802 ../panel/panel-dialogs.c:1026
-#, fuzzy
 msgid "Span Monitors"
-msgstr "פזר צגים"
+msgstr ""
 
 #: ../panel/panel-dialogs.c:862 ../panel/panel-dialogs.c:1091
 msgid "Left"
@@ -592,12 +590,12 @@ msgstr "תמיד קבץ משימות"
 #: ../plugins/windowlist/windowlist.c:226
 #, c-format
 msgid "Are you sure you want to remove workspace %d?"
-msgstr ""
+msgstr "האם אתה בטוח שברצונך להסיר את סביבת העבודה \"%d\"?"
 
 #: ../plugins/windowlist/windowlist.c:227
 #, c-format
 msgid "Are you sure you want to remove workspace '%s'?"
-msgstr ""
+msgstr "האם אתה בטוח שברצונך להסיר את סביבת העבודה \"%s\"?"
 
 #: ../plugins/windowlist/windowlist.c:428
 #, c-format
@@ -636,48 +634,43 @@ msgstr ""
 #: ../plugins/windowlist/windowlist-dialog.c:160
 #, fuzzy
 msgid "Urgency Notification"
-msgstr "השתמש בהתרעת _פתיחה"
+msgstr "התראה מידית"
 
 #: ../plugins/windowlist/windowlist-dialog.c:167
 msgid "_Disabled"
-msgstr ""
+msgstr "_מבוטל"
 
 #: ../plugins/windowlist/windowlist-dialog.c:176
 msgid "For _other workspaces"
-msgstr ""
+msgstr "בשביל סביבות עבודה _אחרות"
 
 #: ../plugins/windowlist/windowlist-dialog.c:185
-#, fuzzy
 msgid "For _all workspaces"
-msgstr "הצג משימות מ_כל סביבות העבודה"
+msgstr "בשביל _כל סביבות העבודה"
 
 #: ../plugins/windowlist/windowlist-dialog.c:199
-#, fuzzy
 msgid "_Icon button"
-msgstr "כפתורי פעולות"
+msgstr "לחצן _סמל"
 
 #: ../plugins/windowlist/windowlist-dialog.c:206
 msgid "A_rrow button"
-msgstr ""
+msgstr "לחצן _חץ"
 
 #: ../plugins/windowlist/windowlist-dialog.c:224
-#, fuzzy
 msgid "Show _windows from all workspaces"
-msgstr "הצג משימות מ_כל סביבות העבודה"
+msgstr "הצג _חלונות מכל סביבות העבודה"
 
 #: ../plugins/windowlist/windowlist-dialog.c:233
-#, fuzzy
 msgid "Show a_pplication icons"
-msgstr "הצג _שמות של יישומים"
+msgstr "הצג סמלי _יישומים"
 
 #: ../plugins/windowlist/windowlist-dialog.c:242
 msgid "Show wor_kspace actions"
-msgstr ""
+msgstr "הצג _פעולות של סביבת העבודה"
 
 #: ../mcs-plugin/plugin.c:46
-#, fuzzy
 msgid "Panel"
-msgstr "לוח %d"
+msgstr "לוח"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
@@ -701,7 +694,7 @@ msgstr "משגר"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr "משגר ייישום עם אפשרות לתפריט"
+msgstr "משגר יישום עם אפשרות לתפריט"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
@@ -740,20 +733,6 @@ msgid "This plugin has no purpose"
 msgstr "להרחבה זו אין כל שימוש"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Panel Manager"
-msgstr "מנהל הלוח"
+msgstr "מנהל לוח Xfce 4"
 
-#, fuzzy
-#~ msgid "Customize panel"
-#~ msgstr "התאם את הלוח"
-
-#, fuzzy
-#~ msgid "Customize panel settings"
-#~ msgstr "התאם את הלוח"
-
-#~ msgid "Include all Workspaces"
-#~ msgstr "כלול את כל משטחי העבודה"
-
-#~ msgid "Show Window Icons"
-#~ msgstr "הצג סמלי חלונות"
