Update traditional Chinese translations for several packages.
(Old svn revision: 21293)

--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-23 10:36+0200\n"
-"PO-Revision-Date: 2006-03-15 01:25+0800\n"
+"PO-Revision-Date: 2006-04-29 07:58+0800\n"
 "Last-Translator: Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
@@ -590,12 +590,12 @@ msgstr "一律將工作分門別類"
 #: ../plugins/windowlist/windowlist.c:226
 #, c-format
 msgid "Are you sure you want to remove workspace %d?"
-msgstr ""
+msgstr "您確定要移除工作區 %d 嗎？"
 
 #: ../plugins/windowlist/windowlist.c:227
 #, c-format
 msgid "Are you sure you want to remove workspace '%s'?"
-msgstr ""
+msgstr "您確定要移除工作區 '%s' 嗎？"
 
 #: ../plugins/windowlist/windowlist.c:428
 #, c-format
@@ -629,53 +629,48 @@ msgid ""
 "<i>Urgency notification</i> will blink the button when an application needs "
 "attention."
 msgstr ""
+"<i>緊急通知</i>會在程式需要您注意時使按鈕閃爍。"
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:160
-#, fuzzy
 msgid "Urgency Notification"
-msgstr "使用啟動提示(_S)"
+msgstr "緊急通知"
 
 #: ../plugins/windowlist/windowlist-dialog.c:167
 msgid "_Disabled"
-msgstr ""
+msgstr "停用(_D)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:176
 msgid "For _other workspaces"
-msgstr ""
+msgstr "用於其他的工作區(_O)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:185
-#, fuzzy
 msgid "For _all workspaces"
-msgstr "顯示所有工作區的工作(_A)"
+msgstr "用於所有工作區(_A)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:199
-#, fuzzy
 msgid "_Icon button"
-msgstr "動作按鈕"
+msgstr "圖示按鈕(_I)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:206
 msgid "A_rrow button"
-msgstr ""
+msgstr "箭號按鈕(_R)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:224
-#, fuzzy
 msgid "Show _windows from all workspaces"
-msgstr "顯示所有工作區的工作(_A)"
+msgstr "顯示所有工作區的視窗(_W)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:233
-#, fuzzy
 msgid "Show a_pplication icons"
-msgstr "顯示應用程式的名稱(_N)"
+msgstr "顯示應用程式圖示(_P)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:242
 msgid "Show wor_kspace actions"
-msgstr ""
+msgstr "顯示工作區動作(_K)"
 
 #: ../mcs-plugin/plugin.c:46
-#, fuzzy
 msgid "Panel"
-msgstr "面板 %d"
+msgstr "面板"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
@@ -738,9 +733,8 @@ msgid "This plugin has no purpose"
 msgstr "此外掛程式無作用"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Panel Manager"
-msgstr "面板管理程式"
+msgstr "Xfce 4 面板管理程式"
 
 #, fuzzy
 #~ msgid "Customize panel"
