--- a/po/eu.po
+++ b/po/eu.po
@@ -7,7 +7,7 @@
 # Piarres Beobide Egaña <pi@beobide.net>, 2004, 2005, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.90.1\n"
+"Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-23 10:36+0200\n"
 "PO-Revision-Date: 2006-03-06 21:37+0100\n"
@@ -502,9 +502,9 @@ msgid ""
 "in the meantime. Not adding launcher (but any files downloaded have not been "
 "lost)."
 msgstr ""
-"Zero Instalatzaile Interfazea amaitu da, baina abiarazte elkarrizket desagertu "
-"egin da bitartean. Ez da abiarazlea gehituko (baina deskargaturiko edozein "
-"fitxategi ez da galdu)." 
+"Zero Instalatzaile Interfazea amaitu da, baina abiarazte elkarrizket "
+"desagertu egin da bitartean. Ez da abiarazlea gehituko (baina deskargaturiko "
+"edozein fitxategi ez da galdu)."
 
 #: ../plugins/launcher/launcher-dialog.c:1827
 msgid "Select file"
@@ -743,16 +743,3 @@ msgstr "Plugin honek ez du zereginik"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "Xfce 4 Panel Kudeatzailea:"
-
-#~ msgid "Customize panel"
-#~ msgstr "Panela pertsonalizatu"
-
-#, fuzzy
-#~ msgid "Customize panel settings"
-#~ msgstr "Panela ezarpenak pertsonalizatu"
-
-#~ msgid "Include all Workspaces"
-#~ msgstr "Idazmahai guztiak barne"
-
-#~ msgid "Show Window Icons"
-#~ msgstr "Leiho Ikonoak Bistarazi"
