--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -7,7 +7,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.90.1\n"
+"Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-23 10:36+0200\n"
 "PO-Revision-Date: 2006-04-29 07:58+0800\n"
@@ -628,8 +628,7 @@ msgstr "視窗清單"
 msgid ""
 "<i>Urgency notification</i> will blink the button when an application needs "
 "attention."
-msgstr ""
-"<i>緊急通知</i>會在程式需要您注意時使按鈕閃爍。"
+msgstr "<i>緊急通知</i>會在程式需要您注意時使按鈕閃爍。"
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:160
@@ -735,17 +734,3 @@ msgstr "此外掛程式無作用"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "Xfce 4 面板管理程式"
-
-#, fuzzy
-#~ msgid "Customize panel"
-#~ msgstr "自訂面板"
-
-#, fuzzy
-#~ msgid "Customize panel settings"
-#~ msgstr "自訂面板"
-
-#~ msgid "Include all Workspaces"
-#~ msgstr "包含所有工作區"
-
-#~ msgid "Show Window Icons"
-#~ msgstr "顯示視窗圖示"
