--- a/po/ru.po
+++ b/po/ru.po
@@ -42,7 +42,7 @@ msgstr "Панель Xfce"
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
-msgstr "Элемент будет удален с панели и его конфигурация будет потеряна."
+msgstr "Элемент будет удалён с панели, и его конфигурация будет потеряна."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:748
@@ -105,7 +105,7 @@ msgstr "Завершить работу панели Xfce?"
 #: ../panel/panel-app.c:737
 msgid "You can't remove the last panel. Would you like to exit the program?"
 msgstr ""
-"Вы не можете удалить последнюю панель. Вы хотите завершить работы программы?"
+"Вы не можете удалить последнюю панель. Вы хотите завершить работу программы?"
 
 #: ../panel/panel-app.c:764
 #, c-format
@@ -114,7 +114,7 @@ msgstr "Удалить панель \"%d\"?"
 
 #: ../panel/panel-app.c:768
 msgid "The selected panel and all its items will be removed."
-msgstr "Выбранная панель и все ее элементы будут удалены."
+msgstr "Выбранная панель и все её элементы будут удалены."
 
 #: ../panel/panel-app.c:807
 msgid "Developer"
@@ -341,7 +341,7 @@ msgstr "ЖК"
 
 #: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:407
 msgid "Show _frame"
-msgstr "Отображать рамку"
+msgstr "_Отображать рамку"
 
 #: ../plugins/clock/clock.c:461
 msgid "Clock Options"
@@ -349,7 +349,7 @@ msgstr "Параметры часов"
 
 #: ../plugins/clock/clock.c:471
 msgid "Use 24-_hour clock"
-msgstr "Использовать 24-часовые часы"
+msgstr "_Использовать 24-часовые часы"
 
 #: ../plugins/clock/clock.c:479
 msgid "Show AM/PM"
@@ -366,7 +366,7 @@ msgstr "Переключатель окон"
 
 #: ../plugins/iconbox/iconbox.c:816
 msgid "Only show minimized applications"
-msgstr "Отображать только свернутые окна"
+msgstr "Отображать только свёрнутые окна"
 
 #: ../plugins/launcher/launcher.c:410 ../plugins/launcher/launcher.c:472
 #, c-format
@@ -385,7 +385,7 @@ msgstr "Новый элемент"
 
 #: ../plugins/launcher/launcher.c:740 ../plugins/launcher/launcher.c:1286
 msgid "This item has not yet been configured"
-msgstr "Этот элемент еще не настроен"
+msgstr "Этот элемент ещё не настроен"
 
 #: ../plugins/launcher/launcher-dialog.c:101
 msgid "Default"
@@ -465,11 +465,11 @@ msgstr "Команда"
 
 #: ../plugins/launcher/launcher-dialog.c:664
 msgid "Run in _terminal"
-msgstr "Выполнять в окне терминала"
+msgstr "_Выполнять в окне терминала"
 
 #: ../plugins/launcher/launcher-dialog.c:682
 msgid "Use _startup notification"
-msgstr "Использовать уведомление о запуске"
+msgstr "_Использовать уведомление о запуске"
 
 #: ../plugins/launcher/launcher-dialog.c:1264
 msgid ""
@@ -523,15 +523,15 @@ msgstr "Разделитель или промежуток"
 
 #: ../plugins/separator/separator.c:284
 msgid "_Draw Separator"
-msgstr "Отображать разделитель"
+msgstr "_Отображать разделитель"
 
 #: ../plugins/separator/separator.c:293
 msgid "_Expand"
-msgstr "Расширять"
+msgstr "_Расширять"
 
 #: ../plugins/showdesktop/showdesktop.c:32
 msgid "Restore hidden windows"
-msgstr "Восстановить свернутые окна"
+msgstr "Восстановить свёрнутые окна"
 
 #: ../plugins/showdesktop/showdesktop.c:33
 msgid "Hide windows and show desktop"
@@ -566,15 +566,15 @@ msgstr "Минимальная ширина:"
 
 #: ../plugins/tasklist/tasklist.c:441
 msgid "Use all available space"
-msgstr "Использовать все доступное пространство"
+msgstr "Использовать всё доступное пространство"
 
 #: ../plugins/tasklist/tasklist.c:458
 msgid "Show tasks from _all workspaces"
-msgstr "Показывать задачи, запущенные на всех рабочих местах"
+msgstr "Показывать задачи, запущенные на _всех рабочих местах"
 
 #: ../plugins/tasklist/tasklist.c:468
 msgid "Show application _names"
-msgstr "Показывать названия приложений"
+msgstr "Показывать _названия приложений"
 
 #: ../plugins/tasklist/tasklist.c:482
 msgid "Never group tasks"
@@ -638,35 +638,35 @@ msgstr ""
 
 #: ../plugins/windowlist/windowlist-dialog.c:167
 msgid "_Disabled"
-msgstr "Отключено"
+msgstr "_Отключено"
 
 #: ../plugins/windowlist/windowlist-dialog.c:176
 msgid "For _other workspaces"
-msgstr "Для других рабочих мест"
+msgstr "Для _других рабочих мест"
 
 #: ../plugins/windowlist/windowlist-dialog.c:185
 msgid "For _all workspaces"
-msgstr "Для всех рабочих мест"
+msgstr "Для _всех рабочих мест"
 
 #: ../plugins/windowlist/windowlist-dialog.c:199
 msgid "_Icon button"
-msgstr "Значок"
+msgstr "_Значок"
 
 #: ../plugins/windowlist/windowlist-dialog.c:206
 msgid "A_rrow button"
-msgstr "Стрелка"
+msgstr "_Стрелка"
 
 #: ../plugins/windowlist/windowlist-dialog.c:224
 msgid "Show _windows from all workspaces"
-msgstr "Показывать окна со всех рабочих мест"
+msgstr "Показывать _окна со всех рабочих мест"
 
 #: ../plugins/windowlist/windowlist-dialog.c:233
 msgid "Show a_pplication icons"
-msgstr "Показывать значки приложений"
+msgstr "Показывать значки _приложений"
 
 #: ../plugins/windowlist/windowlist-dialog.c:242
 msgid "Show wor_kspace actions"
-msgstr "Показывать действия над рабочими местами"
+msgstr "Показывать действия над _рабочими местами"
 
 #: ../mcs-plugin/plugin.c:46
 msgid "Panel"
