Updated Polish translations by Piotr Malinski <admin@rk.edu.pl>.
(Old svn revision: 21442)

--- a/po/pl.po
+++ b/po/pl.po
@@ -73,7 +73,7 @@ msgstr "Nowy element"
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:829 ../panel/panel.c:656
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
 msgid "Customize Panel"
-msgstr "Dopasuj Palej"
+msgstr "Dopasuj Panel"
 
 #: ../panel/panel.c:667 ../panel/panel-dialogs.c:549
 msgid "Add Items"
@@ -192,9 +192,8 @@ msgid "Full Width"
 msgstr "Pełna Długość"
 
 #: ../panel/panel-dialogs.c:802 ../panel/panel-dialogs.c:1026
-#, fuzzy
 msgid "Span Monitors"
-msgstr "Wybierz Monitor"
+msgstr "Marginesy Monitora"
 
 #: ../panel/panel-dialogs.c:862 ../panel/panel-dialogs.c:1091
 msgid "Left"
