Updated Japanese translations.
(Old svn revision: 21500)

--- a/po/ja.po
+++ b/po/ja.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-23 10:36+0200\n"
-"PO-Revision-Date: 2006-05-01 15:24+0900\n"
+"PO-Revision-Date: 2006-05-05 14:07+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -178,7 +178,7 @@ msgid ""
 "the list."
 msgstr ""
 "このリストからパネルへドラッグするとアイテムが追加されます。\n"
-"削除するにはパネルからこのリストへドラッグして下さい。"
+"削除するにはパネルからこのリストへドラッグしてください。"
 
 #: ../panel/panel-dialogs.c:577
 msgid "Available Items"
@@ -299,7 +299,7 @@ msgstr "パネルアクション"
 
 #: ../plugins/actions/actions.c:416
 msgid "Select action type:"
-msgstr "アクションのタイプを選択して下さい"
+msgstr "アクションのタイプを選択してください"
 
 #: ../plugins/actions/actions.c:425
 msgid "Lock screen"
@@ -440,11 +440,11 @@ msgstr "ターミナル"
 
 #: ../plugins/launcher/launcher-dialog.c:400
 msgid "Select image file"
-msgstr "画像ファイルを選択して下さい"
+msgstr "画像ファイルを選択してください"
 
 #: ../plugins/launcher/launcher-dialog.c:446
 msgid "Select command"
-msgstr "コマンドを選択して下さい"
+msgstr "コマンドを選択してください"
 
 #: ../plugins/launcher/launcher-dialog.c:469
 msgid "Name"
@@ -496,7 +496,7 @@ msgstr ""
 "%s\n"
 "\n"
 "Zero Install に関するヘルプは\n"
-"http://0install.net を御覧下さい"
+"http://0install.net を御覧ください"
 
 # FIXME: wtf
 #: ../plugins/launcher/launcher-dialog.c:1469
@@ -506,12 +506,12 @@ msgid ""
 "lost)."
 msgstr ""
 "Zero Install の GUI が終了していますが、その間ランチャーダイアログが表示され"
-"ていません。ランチャーを追加しないで下さい (ダウンロードしたファイルが失われ"
-"ることはありません)。"
+"ていません。ランチャーを追加しないでください (ダウンロードしたファイルが失わ"
+"れることはありません)。"
 
 #: ../plugins/launcher/launcher-dialog.c:1827
 msgid "Select file"
-msgstr "ファイルを選択して下さい"
+msgstr "ファイルを選択してください"
 
 #: ../plugins/pager/pager.c:301 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
