--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-05  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+
 2006-04-29  Hydosningore Cia <hydonsingore@mail.educities.edu.tw>
 
 	* zh_TW.po: Traditional Chinese translation update.
