--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,7 @@
 2006-05-05  Daichi Kawahata <daichi@xfce.org>
 
+	* cs.po: Updated Czech translations by Michal Varady
+	  <miko.vaji@gmail.com>.
 	* ja.po: Updated Japanese translations.
 
 2006-04-29  Hydosningore Cia <hydonsingore@mail.educities.edu.tw>
