--- a/po/he.po
+++ b/po/he.po
@@ -2,22 +2,22 @@
 # Hebrew translations for xfce4-panel package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
+#
 # Dotan Kamber <kamberd@yahoo.com>, 2004, 2006.
 # Jonatan Perry <Jonatan443@walla.co.il>, 2004.
 # Yuval Tanny <tanai@int.gov.il>, 2004, 2006.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.90.2\n"
+"Project-Id-Version: he\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-23 10:36+0200\n"
-"PO-Revision-Date: 2006-04-28 14:03+0300\n"
+"PO-Revision-Date: 2006-05-05 22:24+0300\n"
 "Last-Translator: Yuval Tanny <tanai@int.gov.il>\n"
 "Language-Team: Hebrew\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10.2\n"
+"X-Generator: KBabel 1.11.2\n"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -39,8 +39,7 @@ msgid "Xfce Panel"
 msgstr "לוח Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr "הפריט יוסר מהלוח ומאפייניו יאבדו."
 
 #. configure, hide by default
@@ -74,11 +73,11 @@ msgstr "הוסף פריט חדש"
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:829 ../panel/panel.c:656
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
 msgid "Customize Panel"
-msgstr "התאם את הלוח"
+msgstr "התאם אישית את הלוח"
 
 #: ../panel/panel.c:667 ../panel/panel-dialogs.c:549
 msgid "Add Items"
-msgstr "הוסף פריטים"
+msgstr "הוספת פריטים ללוח"
 
 #: ../panel/panel.c:682 ../plugins/actions/actions.c:424
 msgid "Quit"
@@ -465,7 +464,7 @@ msgstr "הרץ בתוך _מסוף"
 
 #: ../plugins/launcher/launcher-dialog.c:682
 msgid "Use _startup notification"
-msgstr "השתמש בהתרעת _פתיחה"
+msgstr "השתמש בהתראת _פתיחה"
 
 #: ../plugins/launcher/launcher-dialog.c:1264
 msgid ""
@@ -703,7 +702,7 @@ msgstr "תצוגה מוקטנת של כל השולחנות המדומים"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr "מוסיף רווח או קו בין פריטי לוח"
+msgstr "מוסיף רווח או קו מפריד בין פריטי הלוח"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
@@ -736,3 +735,4 @@ msgstr "להרחבה זו אין כל שימוש"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "מנהל לוח Xfce 4"
+
