Updated Slovak translations by Roman Moravcik <roman.moravcik@gmail.com>.
(Old svn revision: 21525)

--- a/po/sk.po
+++ b/po/sk.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-06 04:20+0900\n"
-"PO-Revision-Date: 2006-02-19 14:24+0100\n"
+"PO-Revision-Date: 2006-03-28 16:32+0200\n"
 "Last-Translator: Roman Moravcik <roman.moravcik@gmail.com>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -253,7 +253,7 @@ msgstr "Na obidvoch stranách"
 
 #: ../panel/panel-dialogs.c:1160
 msgid "Select Monitor"
-msgstr ""
+msgstr "Zvoliť monitor"
 
 #. Button Layout
 #: ../panel/panel-dialogs.c:1278 ../plugins/clock/clock.c:431
@@ -264,16 +264,15 @@ msgstr "Vzhľad"
 #. size
 #: ../panel/panel-dialogs.c:1289
 msgid "Size (pixels):"
-msgstr ""
+msgstr "Veľkosť (bodov):"
 
 #: ../panel/panel-dialogs.c:1312
-#, fuzzy
 msgid "Transparency (%):"
-msgstr "Priesvitnosť"
+msgstr "Priesvitnosť (%):"
 
 #: ../panel/panel-dialogs.c:1336
 msgid "Make active panel opaque"
-msgstr ""
+msgstr "Aktívny panel bude nepriehľadný"
 
 #: ../panel/panel-dialogs.c:1375 ../panel/panel-dialogs.c:1411
 #: ../panel/panel-dialogs.c:1436
@@ -376,7 +375,7 @@ msgstr "Nemôžem spusiť \"%s\"."
 #: ../plugins/launcher/launcher.c:435
 #, c-format
 msgid "Error in command \"%s\""
-msgstr ""
+msgstr "Chybný príkaz \"%s\""
 
 #: ../plugins/launcher/launcher.c:682 ../plugins/launcher/launcher.c:1285
 #: ../plugins/launcher/launcher-dialog.c:1142
@@ -517,9 +516,8 @@ msgstr "Počet stĺpcov:"
 
 #: ../plugins/separator/separator.c:271
 #: ../plugins/separator/separator.desktop.in.in.h:2
-#, fuzzy
 msgid "Separator or Spacing"
-msgstr "Oddeľovač"
+msgstr "Oddeľovač alebo medzera"
 
 #: ../plugins/separator/separator.c:284
 msgid "_Draw Separator"
@@ -599,9 +597,9 @@ msgid "Are you sure you want to remove workspace '%s'?"
 msgstr ""
 
 #: ../plugins/windowlist/windowlist.c:428
-#, fuzzy, c-format
+#, c-format
 msgid "Workspace %d"
-msgstr "Pridať pracovnú plochu"
+msgstr "Pracovná plocha %d"
 
 #: ../plugins/windowlist/windowlist.c:530
 #: ../plugins/windowlist/windowlist.c:536
@@ -609,14 +607,14 @@ msgid "Add workspace"
 msgstr "Pridať pracovnú plochu"
 
 #: ../plugins/windowlist/windowlist.c:549
-#, fuzzy, c-format
+#, c-format
 msgid "Remove Workspace %d"
-msgstr "Odstrániť panel \"%d\"?"
+msgstr "Odstrániť pracovnú plochu %d"
 
 #: ../plugins/windowlist/windowlist.c:550
-#, fuzzy, c-format
+#, c-format
 msgid "Remove Workspace '%s'"
-msgstr "Odstrániť panel \"%d\"?"
+msgstr "Odstrániť pracovnú plochu '%s'"
 
 #. Windowlist Settings
 #: ../plugins/windowlist/windowlist-dialog.c:131
