--- a/po/et.po
+++ b/po/et.po
@@ -1,8 +1,8 @@
 # Estonian translation of xfce4-panel.
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Peeter Vois <peeter.vois@proekspert.ee>, 2004.
-# Mart Tõnso <mart.tonso@ttu.ee>, 2004.
+# Peeter Vois <Peeter.Vois@mail.ee>, 2004.
+# Mart Tõnso <tm@rinjin.pri.ee>, 2004.
 #
 msgid ""
 msgstr ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-12-07 12:32+0100\n"
 "PO-Revision-Date: 2005-09-29 13:49+0900\n"
-"Last-Translator: Mart Tõnso <mart.tonso@ttu.ee>\n"
+"Last-Translator: Mart Tõnso <tm@rinjin.pri.ee>\n"
 "Language-Team: Estonian <et@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
