--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,38 +1,335 @@
+2006-05-07  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translation.
+
+2006-05-07  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Finnish translations updated.
+
+2006-05-06  Adriano Winter Bess <awbess@gmail.com>
+
+	* pt_BR.po: Updated Brazilian Portuguese translations.
+
 2006-05-06  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Updated Greek translation.
+
+2006-05-06  Szervac Attila <sas@321.hu>
+
+	* hu.po: hu trunk: little updates
 
 2006-05-05  Daichi Kawahata <daichi@xfce.org>
 
 	* sk.po: Updated Slovak translations by Roman Moravcik
 	  <roman.moravcik@gmail.com>.
+	* xfce4-panel.pot, *.po: Bump.
+
+2006-05-05  Yuval Tanny <tanai@int.gov.il>
+
+	* he.po: Updated Hebrew translation
+
+2006-05-05  Daichi Kawahata <daichi@xfce.org>
+
 	* cs.po: Updated Czech translations by Michal Varady
 	  <miko.vaji@gmail.com>.
 	* ja.po: Updated Japanese translations.
 
-2006-04-29  Hydosningore Cia <hydonsingore@mail.educities.edu.tw>
+2006-05-02  Daichi Kawahata <daichi@xfce.org>
+
+	* ChangeLog: Removed timestamps so that a translator isn't
+	  bothered: "Then, what time is it now in UTC?"
+	* pl.po: Updated Polish translations by Piotr Malinski
+	  <admin@rk.edu.pl>.
+
+2006-05-01  Daichi Kawahata <daichi@xfce.org>
+
+	* ru.po: Updated Russian translations by
+	  Andrey Fedoseev <andrey.fedoseev@gmail.com>,
+	  Maxim Zenin <webmechanics@gmail.com>,
+	  Sergey Fedoseev <fedoseev.sergey@gmail.com>.
+	* *.po: Updated.
+
+2006-04-30  Daichi Kawahata <daichi@xfce.org>
+
+	* pl.po: Updated Polish translations by Piotr Malinski
+	  <admin@rk.edu.pl>.
+
+2006-04-29  Daichi Kawahata <daichi@xfce.org>
+
+	* cs.po: Updated Czech translations by Michal Varady
+	  <miko.vaji@gmail.com>.
+	* pl.po: Updated Polish translations by Piotr Malinski
+	  <riklaunim@gmail.com>.
+	* vi.po: Updated Vietnamese translations by Phan Vinh Thinh
+	  <teppi@vnlinux.org>.
+
+2006-04-29  Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>
 
 	* zh_TW.po: Traditional Chinese translation update.
 
+2006-04-28  Yuval Tanny <tanai@int.gov.il>
+
+	* he.po: Hebrew translation update.
+
+2006-04-26  Maxim Dziumanenko <mvd@mylinux.ua>
+
+	* uk.po: Updated Ukrainian translation.
+
+2006-04-26  Peeter Vois <peeter.vois@proekspert.ee>
+
+	* et.po:
+
+2006-04-25  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Finnish translations updated.
+
+2006-04-24  Jasper Huijsmans <jasper@xfce.org>
+
+	* POTFILES.in: Remove generated files from POTFILES.in. Patch by
+	  Jari Rahkonen.
+
 2006-04-24  Piarres Beobide <pi@beobide.net>
 
-	* eu.po: Basque translation update
+	* eu.po: Basque translation update.
+
+2006-04-24  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Greek translation update
+
+2006-04-23  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+	* ru.po: Updated Russian translations by Sergey Fedoseev
+	  <fedoseev.sergey@gmail.com>.
+
+2006-04-23  Szervac Attila <sas@321.hu>
+
+	* hu.po: hu trunk: cal, desktop, mcs-plugins & panel updates
+
+2006-04-23  Jasper Huijsmans <jasper@xfce.org>
+
+	* POTFILES.in, xfce4-panel.pot, *.po: Improved windowlist plugin
+	  from Nick Schermer. This adds some strings to translate.
+
+2006-04-22  Daichi Kawahata <daichi@xfce.org>
+
+	* zh_CN.po: Updated Simplified Chinese by Jick Nan
+	  <jick.nan@gmail.com>.
+
+2006-04-21  Yuval Tanny <tanai@int.gov.il>
+
+	* he.po: Hebrew translations update.
+
+2006-04-17  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Greek translations update.
+
+2006-04-17  Daichi Kawahata <daichi@xfce.org>
+
+	* et.po: Updated Estonian translations by Peeter Vois
+	  <peeter.vois@proekspert.ee>.
+	* xfce4-panel.pot, *.po: Updated.
+
+2006-04-16  Benedikt Meurer <benny@xfce.org>
+
+	* xfce4-panel.pot: Update for 4.4beta1.
+
+2006-04-16  Szervac Attila <sas@321.hu>
+
+	* hu.po: hu trunk: panel, wm & mcs-plugins updates
+
+2006-04-15  Daichi Kawahata <daichi@xfce.org>
+
+	* *.po: Bump, etc.
+	* ru.po: Updated Russian translations by Andrey Fedoseev
+	  <andrey.fedoseev@gmail.com>.
+	* ko.po: Updated Korean translations by ByungHyun Choi
+	  <byunghyun.choi@gmail.com>.
+
+2006-04-13  Szervac Attila <sas@321.hu>
+
+	* hu.po: hu: calendar, appfinder, icon-theme & panel updates
+
+2006-04-09  Daichi Kawahata <daichi@xfce.org>
+
+	* fi.po: Updated Finnish translations by Jari Rahkonen
+	  <jari.rahkonen@pp1.inet.fi>.
+	* xfce4-panel.pot, *.po: Updated.
+
+2006-04-01  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Greek translations update & polish by Stathis Kamperis
+	  <ekamperi@auth.gr>
+
+2006-03-30  Daichi Kawahata <daichi@xfce.org>
+
+	* vi.po: Updated Vietnamese translations by Phan Vinh Thinh
+	  <teppi@vnlinux.org>.
+
+2006-03-27  Daichi Kawahata <daichi@xfce.org>
+
+	* ru.po: Updated Russian translations by
+	  Andrey Fedoseev <andrey.fedoseev@gmail.com>,
+	  Sergey Fedoseev <fedoseev.sergey@gmail.com>.
+	* xfce4-panel.pot, *.po: Updated.
+
+2006-03-19  Daichi Kawahata <daichi@xfce.org>
+
+	* pl.po: Updated Polish translations by Piotr Malinski
+	  <admin@rk.edu.pl>.
+
+2006-03-19  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+
+2006-03-18  Pau Rullan Ferragut <paurullan@bulma.net>
+
+	* ca.po: [i18n] catalan little fixes
+
+2006-03-18  Pau Rullan Ferragut <paurullan@bulma.net>
+
+	* ca.po: [i18n] catalan little of work on trunk
+
+2006-03-18  Daichi Kawahata <daichi@xfce.org>
+
+	* xfce4-panel.pot, *.po: Updated.
+	* ru.po: Updated Russian translations by
+	  Andrey Fedoseev <andrey.fedoseev@gmail.com>,
+	  Sergey Fedoseev <fedoseev.sergey@gmail.com>.
 
 2006-03-14  Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>
 
 	* zh_TW.po: Traditional Chinese translation update.
 
+2006-03-12  Jasper Huijsmans <jasper@xfce.org>
+
+	* POTFILES.in: Apperently there can be problems with last empty
+	  line. Suggested by Jani Monoses.
+
+2006-03-12  Sylvain Vedrenne <gnu_sylvain@xfce.org>
+
+	* eo.po: Completed update of Esperanto translations for
+	  xfce4-panel.
+
+2006-03-12  Sylvain Vedrenne <gnu_sylvain@xfce.org>
+
+	* eo.po: Esperanto translations: updated fuzzy strings.
+
 2006-03-06  Piarres Beobide <pi@beobide.net>
 
-	* eu.po: Basque translation update
+	* eu.po: Basque translation update.
+
+2006-03-04  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+	* xfce4-panel.pot, *.po: Updated.
+
+2006-03-02  Daichi Kawahata <daichi@xfce.org>
+
+	* et.po: Updated Estonian translations by Peeter Vois
+	  <Peeter.Vois@mail.ee>.
+
+2006-02-26  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+
+2006-02-26  Pau Rullan Ferragut <paurullan@bulma.net>
+
+	* ca.po: [i18n] catalan translation xfce4-panel
+
+2006-02-25  Jasper Huijsmans <jasper@xfce.org>
+
+	* *.po: Update API docs and translations
+
+2006-02-25  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Updated Greek translation
+
+2006-02-25  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+	* fi.po: Updated Finnish translations by Jari Rahkonen
+	  <jari.rahkonen@pp1.inet.fi>.
+	* xfce4-panel.pot, *.po: Updated. Discarded obsolete
+	  translations.
+
+2006-02-24  Daichi Kawahata <daichi@xfce.org>
+
+	* fi.po: Updated Finnish translations by Jari Rahkonen
+	  <jari.rahkonen@pp1.inet.fi>.
+
+2006-02-21  Daichi Kawahata <daichi@xfce.org>
+
+	* sk.po: Updated Slovak translations by Roman Moravcik
+	  <roman.moravcik@gmail.com>.
+
+2006-02-19  Daichi Kawahata <daichi@xfce.org>
+
+	* de.po: Updated German translations by Fabian Nowak
+	  <timystery@arcor.de>.
+
+2006-02-18  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+	* xfce4-panel.pot, *.po: Updated.
+
+2006-02-16  Pau Rullan Ferragut <paurullan@bulma.net>
+
+	* ca.po: [i18n] catalan: little fixes of old strings
+	  (even that the translation is very fuzzy)
+
+2006-02-16  Jean-Francois Wauthy <pollux@xfce.org>
+
+	* zh_CN.po: updated zh_CN translations.
+
+2006-02-13  Jean-Francois Wauthy <pollux@xfce.org>
+
+	* vi.po: updated VI translations.
+
+2006-02-12  Daichi Kawahata <daichi@xfce.org>
+
+	* fi.po: Updated Finnish translations by Jari Rahkonen
+	  <jari.rahkonen@pp1.inet.fi>.
+
+2006-02-11  Jasper Huijsmans <jasper@xfce.org>
+
+	* xfce4-panel.pot, *.po: Fix some strings (patch by Jari Rakonen).
+	  Update po files.
+
+2006-02-05  Yuval Tanny <tanai@int.gov.il>
+
+	* he.po: Update Hebrew translations.
+
+2006-02-05  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Updated Greek translations
+
+2006-02-04  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+	* *.po: Bump the version up.
 
 2006-01-30  Piarres Beobide <pi@beobide.net>
 
-	* eu.po: Basque translation update
+	* eu.po: Basque translation update.
+
+2006-01-29  Jasper Huijsmans <jasper@xfce.org>
+
+	* POTFILES.in, xfce4-panel.pot, *.po: Add windowlist and
+	  showdesktop plugins ported by Jani Monoses.
+
+2006-01-29  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+	* *.po: Updated.
+
+2006-01-19  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
 
 2006-01-16  Piarres Beobide <pi@beobide.net>
 
-	* eu.po: Basque translation update
+	* eu.po: Basque translation update.
 
 2006-01-15  Daichi Kawahata <daichi@xfce.org>
 
@@ -57,13 +354,7 @@
 
 2006-01-07  Daichi Kawahata <daichi@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po,
-	  ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po,
-	  pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po,
-	  uk.po, vi.po, xfce4-panel.pot, zh_CN.po, zh_TW.po: Updated
-	  copyright information.
+	* xfce4-panel.pot, *.po: Updated copyright information.
 
 2006-01-06  Adriano Winter Bess <awbess@gmail.com>
 
@@ -79,22 +370,11 @@
 
 2006-01-01  Daichi Kawahata <daichi@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po,
-	  ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po,
-	  pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po,
-	  uk.po, vi.po, xfce4-panel.pot, zh_CN.po, zh_TW.po: Updated.
+	* xfce4-panel.pot, *.po: Updated.
 
 2005-12-20  Jasper Huijsmans <jasper@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po,
-	  ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po,
-	  pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po,
-	  uk.po, vi.po, xfce4-panel.pot, zh_CN.po, zh_TW.po: update
-	  po files.
+	* xfce4-panel.pot, *.po: update po files.
 
 2005-12-11  Stavros Giannouris <stavrosg2002@freemail.gr>
 
@@ -102,13 +382,7 @@
 
 2005-12-06  Jasper Huijsmans <jasper@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po,
-	  ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po,
-	  pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po,
-	  uk.po, vi.po, xfce4-panel.pot, zh_CN.po, zh_TW.po:  Updated
-	  po(t)-files
+	* xfce4-panel.pot, *.po:  Updated po(t)-files
 
 2005-11-28  Daichi Kawahata <daichi@xfce.org>
 
@@ -116,13 +390,7 @@
 
 2005-11-28  Daichi Kawahata <daichi@xfce.org>
 
-	* ChangeLog, ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po,
-	  de.po, el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po,
-	  fa.po, fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po,
-	  ja.po, ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po,
-	  pl.po, pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po,
-	  tr.po, uk.po, vi.po, xfce4-panel.pot, zh_CN.po, zh_TW.po:
-	  Updated.
+	* xfce4-panel.pot, *.po: Updated.
 
 2005-11-21  Stavros Giannouris <stavrosg2002@freemail.gr>
 
@@ -132,14 +400,6 @@
 
 	* es.po: Updated Spanish translations by Rudy Godoy
 	  <rudy@kernel-panik.org>.
-
-2005-11-05  Daichi Kawahata <daichi@xfce.org>
-
-	* ChangeLog: Deciphering.
-
-2005-11-05  Daichi Kawahata <daichi@xfce.org>
-
-	* ChangeLog: Trimmed and updated.
 
 2005-11-04  Daichi Kawahata <daichi@xfce.org>
 
@@ -166,12 +426,7 @@
 
 2005-10-29  Daichi Kawahata <daichi@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po, ko.po,
-	  lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po, pt_BR.po,
-	  pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po, uk.po,
-	  vi.po, zh_CN.po, zh_TW.po: Updated and bumped the version up.
+	* *.po: Updated and bumped the version up.
 
 2005-10-27  Pau Rullan Ferragut <paurullan@bulma.net>
 
@@ -180,20 +435,11 @@
 
 2005-10-24  Piarres Beobide <pi@beobide.net>
 
-	* ChangeLog, eu.po: Basque translation update
+	* eu.po: Basque translation update.
 
 2005-10-21  Daichi Kawahata <daichi@xfce.org>
 
-	* ChangeLog: Added a blank line.
-
-2005-10-21  Daichi Kawahata <daichi@xfce.org>
-
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ko.po,
-	  lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po, pt_BR.po,
-	  pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po, uk.po,
-	  vi.po, zh_CN.po, zh_TW.po: Updated with the latest POT file.
+	* *.po: Updated with the latest POT file.
 
 2005-10-21  Daichi Kawahata <daichi@xfce.org>
 
@@ -204,31 +450,17 @@
 	* pl.po: Updated Polish translations by Piotr Malinski
 	  <riklaunim@gmail.com>.
 
-2005-10-21  Daichi Kawahata <daichi@xfce.org>
-
-	* ChangeLog: Updated.
-
 2005-10-20  Alex Dupre <ale@FreeBSD.org>
 
 	* it.po: Update Italian translations.
 
 2005-10-16  Daichi Kawahata <daichi@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po,
-	  ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po,
-	  pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po,
-	  uk.po, vi.po, zh_CN.po, zh_TW.po: Updated.
+	* *.po: Updated.
 
 2005-10-15  Daichi Kawahata <daichi@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po,
-	  ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po,
-	  pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po,
-	  uk.po, vi.po, zh_CN.po, zh_TW.po: Updated.
+	* *.po: Updated.
 
 2005-10-14  Daichi Kawahata <daichi@xfce.org>
 
@@ -237,12 +469,7 @@
 
 2005-10-13  Daichi Kawahata <daichi@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po,
-	  ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po,
-	  pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po,
-	  uk.po, vi.po, zh_CN.po, zh_TW.po: Updated and bumped version.
+	* *.po: Updated and bumped version.
 
 2005-10-11  Daichi Kawahata <daichi@xfce.org>
 
@@ -258,13 +485,8 @@
 
 2005-10-09  Jasper Huijsmans <jasper@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po,
-	  ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po,
-	  pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po,
-	  uk.po, vi.po, zh_CN.po, zh_TW.po: Change menu layout and text
-	  as suggested by Jannis and Fabian.
+	* *.po: Change menu layout and text as suggested by Jannis and
+	  Fabian.
 
 2005-10-07  Daichi Kawahata <daichi@xfce.org>
 
@@ -285,13 +507,7 @@
 
 2005-09-29  Daichi Kawahata <daichi@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po,
-	  ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po,
-	  pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po,
-	  uk.po, vi.po, zh_CN.po, zh_TW.po: Changed copyright notification
-	  by the author's request.
+	* *.po: Changed copyright notification by the author's request.
 
 2005-09-29  Daichi Kawahata <daichi@xfce.org>
 
@@ -299,25 +515,13 @@
 
 2005-09-29  Daichi Kawahata <daichi@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po,
-	  ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po,
-	  pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po,
-	  uk.po, vi.po, zh_CN.po, zh_TW.po: Bumped version. Discarded
-	  obsolete translations. Added fallback address. Modified initial
-	  comment strings.
+	* *.po: Bumped version. Discarded obsolete translations. Added
+	  fallback address. Modified initial comment strings.
 
 2005-09-28  Jasper Huijsmans <jasper@xfce.org>
 
-	* ar.po, az.po, be.po, bg.po, bn_IN.po, ca.po, cs.po, de.po,
-	  el.po, en_GB.po, eo.po, es.po, es_MX.po, et.po, eu.po, fa.po,
-	  fi.po, fr.po, gu.po, he.po, hi.po, hu.po, hy.po, it.po, ja.po,
-	  ko.po, lt.po, mr.po, ms.po, nb_NO.po, nl.po, pa.po, pl.po,
-	  pt_BR.po, pt_PT.po, ro.po, ru.po, sk.po, sv.po, ta.po, tr.po,
-	  uk.po, vi.po, zh_CN.po, zh_TW.po: Merge back old panel
-	  translations. They are mostly unused, I guess, but maybe a few
-	  strings are still the same. Remove
+	* *.po: Merge back old panel translations. They are mostly unused,
+	  I guess, but maybe a few strings are still the same. Remove
 	  xfce-panel-settings.desktop.in. It doesn't really make sense
 	  anymore.
 
