--- a/po/ja.po
+++ b/po/ja.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-06 04:20+0900\n"
-"PO-Revision-Date: 2006-05-05 14:07+0900\n"
+"PO-Revision-Date: 2006-05-06 19:05+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -173,7 +173,7 @@ msgstr ""
 
 #: ../panel/panel-dialogs.c:526
 msgid "Add Items to the Panel"
-msgstr ""
+msgstr "アイテムをパネルに追加します"
 
 #: ../panel/panel-dialogs.c:556
 msgid ""
