--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-07 Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Basque translation update.
+
 2006-05-07  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translation.
