--- a/po/eu.po
+++ b/po/eu.po
@@ -175,7 +175,7 @@ msgstr ""
 
 #: ../panel/panel-dialogs.c:526
 msgid "Add Items to the Panel"
-msgstr ""
+msgstr "Elementuak gehitu Panelera"
 
 #: ../panel/panel-dialogs.c:556
 msgid ""
