Updated Polish translations by Szymon Kalasz <szymon_maestro@gazeta.pl>.
(Old svn revision: 21637)

--- a/po/pl.po
+++ b/po/pl.po
@@ -5,14 +5,15 @@
 # Daniel Mróz <beorn@alpha.pl>, 2003.
 # Wit Wiliński <madman@berlios.de>, 2005.
 # Piotr Maliński <riklaunim@gmail.com>, 2006.
+# Szymon Kałasz <szymon_maestro@gazeta.pl>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-06 04:20+0900\n"
-"PO-Revision-Date: 2006-01-15 10:33+0100\n"
-"Last-Translator: Piotr Maliński <riklaunim@gmail.com>\n"
+"PO-Revision-Date: 2006-05-07 19:50+0200\n"
+"Last-Translator: Szymon Kałasz <szymon_maestro@gazeta.pl>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -144,7 +145,7 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
-"Używanie: %s [OPCJE]\n"
+" Używanie: %s [OPCJE]\n"
 "\n"
 
 #. Only translate the descriptions, not the options itself
@@ -163,18 +164,18 @@ msgid ""
 msgstr ""
 " OPCJE\n"
 " -h, --help      pokazuje ten tekst\n"
-" -v, --version  pokazuje numer wersji\n"
+" -v, --version   pokazuje numer wersji\n"
 " -c, --customize pokazuje dane konfiguracyjne\n"
 " -s, --save      zapisuje konfiguracje\n"
 " -r, --restart   restartuje panele\n"
-" -q, --quit     kończy sesję\n"
+" -q, --quit      kończy sesję\n"
 " -x, --exit      zamyka panele i kończy program\n"
 " -a, --add       dodaje nowe elementy\n"
 "\n"
 
 #: ../panel/panel-dialogs.c:526
 msgid "Add Items to the Panel"
-msgstr ""
+msgstr "Dodaj elementy do panelu"
 
 #: ../panel/panel-dialogs.c:556
 msgid ""
@@ -601,7 +602,7 @@ msgstr "Czy chcesz usunąć pulpit %d?"
 #: ../plugins/windowlist/windowlist.c:227
 #, c-format
 msgid "Are you sure you want to remove workspace '%s'?"
-msgstr "Czy chcesz usunąć pulput '%s'?"
+msgstr "Czy chcesz usunąć pulpit '%s'?"
 
 #: ../plugins/windowlist/windowlist.c:428
 #, c-format
