--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2006-05-13  Daichi Kawahata <daichi@xfce.org>
+
+	* pl.po: Updated Polish translations by Szymon Kalasz
+	  <szymon_maestro@gazeta.pl>.
+
 2006-05-07 Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update.
+	* eu.po: Basque translation update.
 
 2006-05-07  Daichi Kawahata <daichi@xfce.org>
 
