--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-06 04:20+0900\n"
-"PO-Revision-Date: 2006-04-29 07:58+0800\n"
+"PO-Revision-Date: 2006-05-13 12:56+0800\n"
 "Last-Translator: Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
@@ -173,7 +173,7 @@ msgstr ""
 
 #: ../panel/panel-dialogs.c:526
 msgid "Add Items to the Panel"
-msgstr ""
+msgstr "新增項目至面板"
 
 #: ../panel/panel-dialogs.c:556
 msgid ""
